@startuml

title __PROJECT's Class Diagram__\n

  package taskman {
    package taskman.backend {
      package taskman.backend.project {
        class Project {
            - name : String
            - description : String
            - creationTime : LocalDateTime
            - dueTime : LocalDateTime
            - taskList : ArrayList<Task>
            + Project()
            + createTask()
            - addTaskToList()
            + getStatus()
            + removeTask()
            + getName()
            - setName()
            + getDescription()
            - setDescription()
            + getCreationTime()
            - setCreationTime()
            + getDueTime()
            - setDueTime()
            + getTask()
            + getTasks()
            + getNumberOfTasks()
            + accept()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.project {
        class ProjectOrganizer {
            - projects : Collection<Project>
            + ProjectOrganizer()
            + getProjectNames()
            + projectExists()
            + getProject()
            + createProject()
            + accept()
        }
      }
    }
  }
  

  Project -up-|> Entity
  ProjectOrganizer -up-|> Entity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
